--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "process": "node ./src/util/processRawJSON.js"
+    "process": "node ./src/util/processRawJSON.js",
+    "tojson": "node ./src/util/processRawCSV.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "csvtojson": "^2.0.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
